--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@lottiefiles/react-lottie-player": "^3.6.0",
     "@tailwindcss/vite": "^4.0.11",
     "axios": "^1.8.4",
+    "framer-motion": "^12.9.4",
     "gsap": "^3.13.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
